# swagger/swagger.yml
@@ -48,8 +48,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.CuposPorDependencia'
-        "403":
-          description: ""
+        "404":
+          description: not found resource
     post:
       tags:
       - cupos_por_dependencia
@@ -65,8 +65,8 @@ paths:
       responses:
         "201":
           description: '{int} models.CuposPorDependencia'
-        "403":
-          description: body is empty
+        "400":
+          description: the request contains incorrect syntax
   /cupos_por_dependencia/{id}:
     get:
       tags:
@@ -84,8 +84,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.CuposPorDependencia'
-        "403":
-          description: :id is empty
+        "404":
+          description: not found resource
     put:
       tags:
       - cupos_por_dependencia
@@ -108,8 +108,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.CuposPorDependencia'
-        "403":
-          description: :id is not int
+        "400":
+          description: the request contains incorrect syntax
     delete:
       tags:
       - cupos_por_dependencia
@@ -124,8 +124,8 @@ paths:
       responses:
         "200":
           description: '{string} delete success!'
-        "403":
-          description: id is empty
+        "404":
+          description: not found resource
   /entrevista/:
     get:
       tags:
@@ -163,8 +163,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.Entrevista'
-        "403":
-          description: ""
+        "404":
+          description: not found resource
     post:
       tags:
       - entrevista
@@ -180,8 +180,8 @@ paths:
       responses:
         "201":
           description: '{int} models.Entrevista'
-        "403":
-          description: body is empty
+        "400":
+          description: the request contains incorrect syntax
   /entrevista/{id}:
     get:
       tags:
@@ -199,8 +199,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.Entrevista'
-        "403":
-          description: :id is empty
+        "404":
+          description: not found resource
     put:
       tags:
       - entrevista
@@ -223,8 +223,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.Entrevista'
-        "403":
-          description: :id is not int
+        "400":
+          description: the request contains incorrect syntax
     delete:
       tags:
       - entrevista
@@ -239,8 +239,8 @@ paths:
       responses:
         "200":
           description: '{string} delete success!'
-        "403":
-          description: id is empty
+        "404":
+          description: not found resource
   /entrevistador/:
     get:
       tags:
@@ -278,8 +278,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.Entrevistador'
-        "403":
-          description: ""
+        "404":
+          description: not found resource
     post:
       tags:
       - entrevistador
@@ -295,8 +295,8 @@ paths:
       responses:
         "201":
           description: '{int} models.Entrevistador'
-        "403":
-          description: body is empty
+        "400":
+          description: the request contains incorrect syntax
   /entrevistador/{id}:
     get:
       tags:
@@ -314,8 +314,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.Entrevistador'
-        "403":
-          description: :id is empty
+        "404":
+          description: not found resource
     put:
       tags:
       - entrevistador
@@ -338,8 +338,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.Entrevistador'
-        "403":
-          description: :id is not int
+        "400":
+          description: the request contains incorrect syntax
     delete:
       tags:
       - entrevistador
@@ -354,8 +354,8 @@ paths:
       responses:
         "200":
           description: '{string} delete success!'
-        "403":
-          description: id is empty
+        "404":
+          description: not found resource
   /entrevistador_entrevista/:
     get:
       tags:
@@ -393,8 +393,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.EntrevistadorEntrevista'
-        "403":
-          description: ""
+        "404":
+          description: not found resource
     post:
       tags:
       - entrevistador_entrevista
@@ -410,8 +410,8 @@ paths:
       responses:
         "201":
           description: '{int} models.EntrevistadorEntrevista'
-        "403":
-          description: body is empty
+        "400":
+          description: the request contains incorrect syntax
   /entrevistador_entrevista/{id}:
     get:
       tags:
@@ -429,8 +429,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.EntrevistadorEntrevista'
-        "403":
-          description: :id is empty
+        "404":
+          description: not found resource
     put:
       tags:
       - entrevistador_entrevista
@@ -453,8 +453,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.EntrevistadorEntrevista'
-        "403":
-          description: :id is not int
+        "400":
+          description: the request contains incorrect syntax
     delete:
       tags:
       - entrevistador_entrevista
@@ -469,8 +469,8 @@ paths:
       responses:
         "200":
           description: '{string} delete success!'
-        "403":
-          description: id is empty
+        "404":
+          description: not found resource
   /estado_entrevista/:
     get:
       tags:
@@ -508,8 +508,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.EstadoEntrevista'
-        "403":
-          description: ""
+        "404":
+          description: not found resource
     post:
       tags:
       - estado_entrevista
@@ -525,8 +525,8 @@ paths:
       responses:
         "201":
           description: '{int} models.EstadoEntrevista'
-        "403":
-          description: body is empty
+        "400":
+          description: the request contains incorrect syntax
   /estado_entrevista/{id}:
     get:
       tags:
@@ -544,8 +544,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.EstadoEntrevista'
-        "403":
-          description: :id is empty
+        "404":
+          description: not found resource
     put:
       tags:
       - estado_entrevista
@@ -568,8 +568,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.EstadoEntrevista'
-        "403":
-          description: :id is not int
+        "400":
+          description: the request contains incorrect syntax
     delete:
       tags:
       - estado_entrevista
@@ -584,8 +584,8 @@ paths:
       responses:
         "200":
           description: '{string} delete success!'
-        "403":
-          description: id is empty
+        "404":
+          description: not found resource
   /evaluacion_inscripcion/:
     get:
       tags:
@@ -623,8 +623,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.EvaluacionInscripcion'
-        "403":
-          description: ""
+        "404":
+          description: not found resource
     post:
       tags:
       - evaluacion_inscripcion
@@ -640,8 +640,8 @@ paths:
       responses:
         "201":
           description: '{int} models.EvaluacionInscripcion'
-        "403":
-          description: body is empty
+        "400":
+          description: the request contains incorrect syntax
   /evaluacion_inscripcion/{id}:
     get:
       tags:
@@ -659,8 +659,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.EvaluacionInscripcion'
-        "403":
-          description: :id is empty
+        "404":
+          description: not found resource
     put:
       tags:
       - evaluacion_inscripcion
@@ -683,8 +683,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.EvaluacionInscripcion'
-        "403":
-          description: :id is not int
+        "400":
+          description: the request contains incorrect syntax
     delete:
       tags:
       - evaluacion_inscripcion
@@ -699,8 +699,8 @@ paths:
       responses:
         "200":
           description: '{string} delete success!'
-        "403":
-          description: id is empty
+        "404":
+          description: not found resource
   /requisito/:
     get:
       tags:
@@ -738,8 +738,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.Requisito'
-        "403":
-          description: ""
+        "404":
+          description: not found resource
     post:
       tags:
       - requisito
@@ -755,8 +755,8 @@ paths:
       responses:
         "201":
           description: '{int} models.Requisito'
-        "403":
-          description: body is empty
+        "400":
+          description: the request contains incorrect syntax
   /requisito/{id}:
     get:
       tags:
@@ -774,8 +774,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.Requisito'
-        "403":
-          description: :id is empty
+        "404":
+          description: not found resource
     put:
       tags:
       - requisito
@@ -798,8 +798,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.Requisito'
-        "403":
-          description: :id is not int
+        "400":
+          description: the request contains incorrect syntax
     delete:
       tags:
       - requisito
@@ -814,8 +814,8 @@ paths:
       responses:
         "200":
           description: '{string} delete success!'
-        "403":
-          description: id is empty
+        "404":
+          description: not found resource
   /requisito_programa_academico/:
     get:
       tags:
@@ -853,8 +853,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.RequisitoProgramaAcademico'
-        "403":
-          description: ""
+        "404":
+          description: not found resource
     post:
       tags:
       - requisito_programa_academico
@@ -870,8 +870,8 @@ paths:
       responses:
         "201":
           description: '{int} models.RequisitoProgramaAcademico'
-        "403":
-          description: body is empty
+        "400":
+          description: the request contains incorrect syntax
   /requisito_programa_academico/{id}:
     get:
       tags:
@@ -889,8 +889,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.RequisitoProgramaAcademico'
-        "403":
-          description: :id is empty
+        "404":
+          description: not found resource
     put:
       tags:
       - requisito_programa_academico
@@ -913,8 +913,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.RequisitoProgramaAcademico'
-        "403":
-          description: :id is not int
+        "400":
+          description: the request contains incorrect syntax
     delete:
       tags:
       - requisito_programa_academico
@@ -929,8 +929,8 @@ paths:
       responses:
         "200":
           description: '{string} delete success!'
-        "403":
-          description: id is empty
+        "404":
+          description: not found resource
   /tipo_entrevista/:
     get:
       tags:
@@ -968,8 +968,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.TipoEntrevista'
-        "403":
-          description: ""
+        "404":
+          description: not found resource
     post:
       tags:
       - tipo_entrevista
@@ -985,8 +985,8 @@ paths:
       responses:
         "201":
           description: '{int} models.TipoEntrevista'
-        "403":
-          description: body is empty
+        "400":
+          description: the request contains incorrect syntax
   /tipo_entrevista/{id}:
     get:
       tags:
@@ -1004,8 +1004,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.TipoEntrevista'
-        "403":
-          description: :id is empty
+        "404":
+          description: not found resource
     put:
       tags:
       - tipo_entrevista
@@ -1028,8 +1028,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.TipoEntrevista'
-        "403":
-          description: :id is not int
+        "400":
+          description: the request contains incorrect syntax
     delete:
       tags:
       - tipo_entrevista
@@ -1044,8 +1044,8 @@ paths:
       responses:
         "200":
           description: '{string} delete success!'
-        "403":
-          description: id is empty
+        "404":
+          description: not found resource
 definitions:
   models.CuposPorDependencia:
     title: CuposPorDependencia
